# anton

./: .gitignore  README.md  anton.py  pyproject.toml
.github/workflows/: ci.yml
anton/: audio.py  cli.py  config.py  hosting.py  logger.py  main.py  telephony.py
anton.egg-info/: PKG-INFO
